# SSM-MetaRL-Unified

./: .dockerignore  .gitignore  ALL_ERRORS_FIXED.md  ARCHITECTURE.md  CLEANUP_PLAN.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_GUIDE.md  Dockerfile  FIXES_SUMMARY.md  HF_SPACE_FIXES.md  HF_SPACE_FIX_REPORT.md  MANIFEST.in  MODEL_CARD.md  MODEL_DOCUMENTATION.md  MODEL_GENERATION_REPORT.md  MUJOCO_RESULTS.md  PROJECT_SUMMARY.md  PROMOTION_SUMMARY.md  README.md  README_MUJOCO.md  README_SPACE.md  REPOSITORY_STATUS.md  RESTORATION_COMPLETE.md  RSI_DAEMON_README.md  RSI_DEPLOYMENT.md  RSI_FINAL_REPORT.md  __init__.py  app.py  app_complete.py  app_functions.txt  app_original_backup.py  app_with_rsi.py  demo.ipynb  deploy_to_hf.py  docker-compose.yml  main.py  main_fixed.py  (+17 more)
.github/workflows/: publish.yml
adaptation/: __init__.py  hybrid_adapter.py  standard_adapter.py  test_time_adaptation.py  test_time_adapter.py
benchmarks/: cartpole_benchmark.py  improved_mujoco_benchmark.py  mujoco_benchmark.py  simple_improved_benchmark.py
benchmarks/results/: benchmark_results.json
benchmarks/results/mujoco/: ant_v5_results.json  halfcheetah_v5_results.json
benchmarks/results/mujoco/tables/: ant_v5_results.md  halfcheetah_v5_results.md
benchmarks/results/simple_improved/: halfcheetah_v5_results.json
benchmarks/results/simple_improved/tables/: halfcheetah_v5_results.md
benchmarks/results/tables/: benchmark_results.md
core/: __init__.py  improved_ssm.py  ssm.py
env_runner/: __init__.py  environment.py
experience/: __init__.py  experience_buffer.py
experiments/: README.md  baselines.py  quick_benchmark.py  serious_benchmark.py  serious_benchmark_design.md  task_distributions.py  visualize_results.py
meta_rl/: __init__.py  meta_maml.py  ppo_trainer.py
models/: cartpole_hybrid_real_model.pth
models/mujoco/: ant_v5_best.pth  halfcheetah_v5_best.pth
models/simple_improved/: ant_v5_best.pth  halfcheetah_v5_best.pth
scripts/: deploy.sh
tests/: test_adaptation.py  test_meta_rl.py  test_results_fixed.txt  test_rsi_integration.py  test_ssm.py
